# qroxi

./: .gitignore  Makefile  README.md  pyproject.toml  qroxi.service
misc/: FoxyProxy.json  proxy.pac
qroxi/: config.py  http_proxy.py  log.py  main.py
