[project]
name = "psp"
version = "0.0.1"
description = ""
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py313"]
skip-string-normalization = false

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "N", "Q", "LOG", "G", "I", "B", "A"]
ignore = []
